k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-app
  namespace: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend-app

  template:
    metadata:
      labels:
        app: frontend-app

    spec:
      containers:
        - name: frontend-app
          image: sachin19102001/frontend-repo:1
          imagePullPolicy: Always

          ports:
            - containerPort: 3005

          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
