k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: frontend

spec:
  selector:
    app: frontend-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: NodePort
